# Evo

./: .gitignore  CMakeLists.txt  Makefile
src/cpp/: algorithm.cpp  test.cpp
src/hpp/: Result.hpp  algorithm.hpp  evo.hpp  std.hpp
src/hpp/Mutate/: creep.hpp  pointMutation.hpp
src/hpp/Recombine/: onePointCrossover.hpp
src/hpp/Select/: fitnessProportionalSelection.hpp  rouletteWheel.hpp  stochasticUniversalSampling.hpp  tournamentSelection.hpp
src/hpp/Termination/: generation.hpp
